# singer-core

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/singer_core/: __init__.py  __main__.py  auth.py  browser.py  config.py  exporter.py  progress.py  scraper.py
tests/: conftest.py  test_auth.py  test_exporter.py  test_progress.py  test_scraper.py
